[project]
name = "provarun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "flow-matching>=1.0.10",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
    "seaborn>=0.13.2",
    "torchdata>=0.10.1",
    "torchinfo>=1.8.0",
    "torchtitan>=0.0.2",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
    "wandb>=0.19.3",
]
